Change password on setting with gmail integrated OTP

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,12 @@
       "AccessDeniedPath": "/Account/AccessDenied",
       "ExpireTimeSpanMinutes": 30
     }
+  },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "degamoauchie61@gmail.com",
+    "Password": "wiqb dokq ekek mfbx",
+    "From": "degamoauchie61@gmail.com"
   }
 }
